# entity-system-rs

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml
doc/: asteroids.md
doc/api/: search-index.js  settings.html  source-files.js
doc/api/entity_system/: all.html  enum.RefreshPeriod.html  index.html  macro.create_entity_manager_component!.html  macro.create_entity_manager_component.html  macro.create_entity_manager_composant!.html  macro.create_entity_manager_composant.html  macro.create_event_adapters!.html  macro.create_event_adapters.html  sidebar-items.js  struct.Adapter.html  struct.BasicVecStorage.html  struct.Connection.html  struct.Entity.html  struct.EntityAllocator.html  struct.EntityAllocatorIterator.html  struct.EntityIterator.html  struct.EntityManager.html  struct.EventDispatcher.html  struct.MyEntityManagerComposant.html  struct.Query.html  struct.SystemManager.html  trait.AccessEventAdapter.html  trait.Component.html  trait.Composant.html  trait.Dispatcher.html  trait.EntityManagerComponent.html  trait.EntityManagerComposant.html  trait.EventHandler.html  trait.Storage.html  trait.StorageAccess.html  trait.System.html
doc/api/entity_system/entity/: struct.Entity.html  struct.EntityAllocator.html  struct.EntityAllocatorIterator.html
doc/api/entity_system/entity_manager/: struct.EntityIterator.html  (+8 more)
examples/: asteroids.rs
src/: entity.rs  entity_manager.rs  event_dispatcher.rs  lib.rs  storage.rs  system_manager.rs
tests/: test_entity.rs  test_entity_manager.rs  test_event_dispatcher.rs  test_system_manager.rs
(+40 files in other folders)
